--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -19,9 +19,10 @@ jobs:
     name: Test Code
     runs-on: ubuntu-latest
     env:
-      go-version: '1.25'
-      linter-version: '1.53.3'
-      scan-severity: 'MEDIUM'
+      GO_VERSION: '1.25'
+      LINTER_VERSION: '1.53.3'
+      GOLANGCI_LINT_VERSION: v2.6
+      SCAN_SEVERITY: 'MEDIUM'
     steps:
 
       # Setup Environment
@@ -30,7 +31,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00  # v6.0.0
         with:
-          go-version: '${{ env.go-version }}'
+          go-version: '${{ env.GO_VERSION }}'
           cache: true
           cache-dependency-path: 'go.sum'
           check-latest: true
@@ -56,9 +57,9 @@ jobs:
           files: .golangci.yaml
       - name: Lint Go
         if: steps.golangci_config.outputs.files_exists == 'true'
-        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9  # v8.0.0
+        uses: golangci/golangci-lint-action@1e7e51e771db61008b38414a730f564565cf7c20  # v9.2.0
         with:
-          version: ${{ env.linter-version }}
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
           args: --timeout=5m
           only-new-issues: ${{ github.event_name == 'pull_request' }}
           skip-cache: false
@@ -83,7 +84,7 @@ jobs:
           hide-progress: true
           format: 'sarif'
           output: 'trivy-results.sarif'
-          severity: ${{ env.scan-severity }}
+          severity: ${{ env.SCAN_SEVERITY }}
           exit-code: '1'
       - name: Upload Trivy Results to GitHub Security
         if: always()
