--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -68,10 +68,9 @@ jobs:
           files: .yamllint.yaml
       - name: Lint YAML
         if: steps.yamllint_config.outputs.files_exists == 'true'
-        uses: karancode/yamllint-github-action@4052d365f09b8d34eb552c363d1141fd60e2aeb2  # v3.12.0
-        with:
-          yamllint_file_or_dir: './*.yaml'
-          yamllint_config_filepath: .yamllint.yaml
+        run: |
+          sudo apt-get update && sudo apt-get install -y yamllint
+          make lint-yaml
 
       # Scan for Vulnerabilities
       - name: Run Trivy Security Scan
