chore: add node metadata

--- a/deployments/eidos/3-rbac.yaml
+++ b/deployments/eidos/3-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: eidos
 rules:
   - apiGroups: [""]
-    resources: ["pods", "configmaps"]
+    resources: ["pods", "configmaps", "nodes", "namespaces"]
     verbs: ["get", "list", "watch", "create", "update", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
