--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,7 +5,6 @@ project_name: eidos
 builds:
   - id: eidos
     binary: eidos
-    # set the modified timestamp on the output binary to the git timestamp to ensure a reproducible build
     mod_timestamp: &build-timestamp '{{ .CommitTimestamp }}'
     dir: cmd/eidos
     env:
@@ -29,7 +28,6 @@ builds:
 
   - id: server
     binary: server
-    # set the modified timestamp on the output binary to the git timestamp to ensure a reproducible build
     mod_timestamp: &build-timestamp '{{ .CommitTimestamp }}'
     dir: cmd/server
     env:
@@ -79,7 +77,7 @@ release:
   prerelease: auto
 
 kos:
-  - id: eidos-ko
+  - id: eidos
     build: eidos
     repositories:
       - ghcr.io/mchmarny/eidos
@@ -94,7 +92,7 @@ kos:
     bare: true
     sbom: spdx
 
-  - id: server-ko
+  - id: eidos-server
     build: server
     repositories:
       - ghcr.io/mchmarny/eidos-server
@@ -110,6 +108,14 @@ kos:
 
 archives:
   - id: eidos
+    ids:
+      - eidos
+    formats:
+      - binary
+    name_template: "{{ .Binary }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  - id: eidos-server
+    ids:
+      - server
     formats:
       - binary
     name_template: "{{ .Binary }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
