chore: marshal to k/v pair in yaml

--- a/deployments/eidos/2-job.yaml
+++ b/deployments/eidos/2-job.yaml
@@ -42,7 +42,7 @@ spec:
         fsGroupChangePolicy: "OnRootMismatch"
       containers:
         - name: eidos
-          image: ghcr.io/mchmarny/cloud-native-stack:v0.4.1
+          image: ghcr.io/mchmarny/eidos:v0.5.4
           command: ["/bin/sh", "-c"]
           env:
             - name: NODE_NAME
