chore: update role rules

--- a/deployments/eidos-agent/1-deps.yaml
+++ b/deployments/eidos-agent/1-deps.yaml
@@ -42,6 +42,9 @@ rules:
   - apiGroups: [""]
     resources: ["secrets"]
     verbs: ["get", "list"]
+  - apiGroups: ["*"]
+    resources: ["clusterpolicies"]
+    verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
