--- a/examples/gb200.yaml
+++ b/examples/gb200.yaml
@@ -1,8 +1,8 @@
 kind: Snapshot
 apiVersion: snapshot.dgxc.io/v1
 metadata:
-  measurement-timestamp: "2025-12-26T15:58:39Z"
-  snapshot-version: 0.7.5
+  recommendation-timestamp: "2025-12-26T19:57:44Z"
+  snapshot-version: 0.7.6
   source-node: ip-10-0-160-248.ec2.internal
 measurements:
   - type: SystemD
@@ -40,7 +40,7 @@ measurements:
           CPUSchedulingPriority: "0"
           CPUSchedulingResetOnFork: false
           CPUShares: 18446744073709551615
-          CPUUsageNSec: 622075597958000
+          CPUUsageNSec: 627096827196000
           CPUWeight: 18446744073709551615
           CacheDirectory: '[]'
           CacheDirectoryMode: "493"
@@ -106,7 +106,7 @@ measurements:
           ExtensionImages: '[]'
           FailureAction: none
           FailureActionExitStatus: "-1"
-          FileDescriptorStoreMax: "0"
+
           FinalKillSignal: "9"
           Following: ""
           FragmentPath: /lib/systemd/system/containerd.service
@@ -205,7 +205,7 @@ measurements:
           Markers: '[]'
           MemoryAccounting: true
           MemoryAvailable: 18446744073709551615
-          MemoryCurrent: 97168719872
+          MemoryCurrent: 97234022400
           MemoryDenyWriteExecute: false
           MemoryHigh: 18446744073709551615
           MemoryLimit: 18446744073709551615
@@ -1160,16 +1160,16 @@ measurements:
           /proc/sys/dev/tty/legacy_tiocsti: "0"
           /proc/sys/fs/aio-max-nr: "65536"
           /proc/sys/fs/aio-nr: "0"
-          /proc/sys/fs/dentry-state: "1865514\t1764890\t45\t0\t778161\t0"
+          /proc/sys/fs/dentry-state: "1870228\t1769560\t45\t0\t782619\t0"
           /proc/sys/fs/dir-notify-enable: "1"
           /proc/sys/fs/epoll/max_user_watches: "216410223"
           /proc/sys/fs/fanotify/max_queued_events: "16384"
           /proc/sys/fs/fanotify/max_user_groups: "128"
           /proc/sys/fs/fanotify/max_user_marks: "1048576"
           /proc/sys/fs/file-max: "9223372036854775807"
-          /proc/sys/fs/file-nr: "2880\t0\t9223372036854775807"
-          /proc/sys/fs/inode-nr: "1082313\t435"
-          /proc/sys/fs/inode-state: "1082313\t435\t0\t0\t0\t0\t0"
+          /proc/sys/fs/file-nr: "5760\t0\t9223372036854775807"
+          /proc/sys/fs/inode-nr: "1082569\t435"
+          /proc/sys/fs/inode-state: "1082569\t435\t0\t0\t0\t0\t0"
           /proc/sys/fs/inotify/max_queued_events: "16384"
           /proc/sys/fs/inotify/max_user_instances: "65535"
           /proc/sys/fs/inotify/max_user_watches: "524288"
@@ -1271,7 +1271,7 @@ measurements:
           /proc/sys/kernel/msgmni: "32000"
           /proc/sys/kernel/ngroups_max: "65536"
           /proc/sys/kernel/nmi_watchdog: "0"
-          /proc/sys/kernel/ns_last_pid: "3683387"
+          /proc/sys/kernel/ns_last_pid: "3780165"
           /proc/sys/kernel/numa_balancing: "0"
           /proc/sys/kernel/numa_balancing_promote_rate_limit_MBps: "65536"
           /proc/sys/kernel/oops_all_cpu_backtrace: "0"
@@ -1307,7 +1307,7 @@ measurements:
           /proc/sys/kernel/random/entropy_avail: "256"
           /proc/sys/kernel/random/poolsize: "256"
           /proc/sys/kernel/random/urandom_min_reseed_secs: "60"
-          /proc/sys/kernel/random/uuid: 0692ecec-c13d-4deb-b9f8-4ae536a8e2b5
+          /proc/sys/kernel/random/uuid: 7d481225-d606-477c-88a2-391adab1be03
           /proc/sys/kernel/random/write_wakeup_threshold: "256"
           /proc/sys/kernel/randomize_va_space: "2"
           /proc/sys/kernel/real-root-dev: "0"
@@ -1555,7 +1555,7 @@ measurements:
       - subtype: server
         data:
           goVersion: go1.24.6
-          platform: linux/arm64
+          platform: linux/amd64
           version: v1.33.5-eks-3025e55
       - subtype: image
         data:
